samples/_failures_safe/1761081237_3b43c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd0220e7.c: In function ‘main’:
./samples/SAFE/__tmp_cd0220e7.c:169: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_cd0220e7.c:168:5: error: expected declaration or statement at end of input
  168 |     if
      |     ^~
